[package]
name = "jwt-authorizer"
description = "jwt authorizer middleware for axum"
version = "0.8.1"
edition = "2021"
authors = ["cduvray <c_duvray@proton.me>"]
license = "MIT"
readme = "docs/README.md"
repository = "https://github.com/cduvray/jwt-authorizer"
keywords = ["jwt","axum","authorisation","jwks"]

[dependencies]
axum = { version = "0.6", features = ["headers"] }
futures-util = "0.3"
futures-core = "0.3"
headers = "0.3"
jsonwebtoken = "8.2"
http = "0.2"
pin-project = "1.0"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0.38"
tokio = { version = "1.25", features = ["full"] }
tower-http = { version = "0.4", features = ["trace", "auth"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
hyper = { version = "0.14", features = ["full"] }
lazy_static = "1.4.0"
tower = { version = "0.4", features = ["util"] }
wiremock = "0.5"
