[package]
name = "jwt-authorizer"
description = "jwt authorizer middleware for axum and tonic"
version = "0.13.0"
edition = "2021"
authors = ["cduvray <c_duvray@proton.me>"]
license = "MIT"
readme = "docs/README.md"
repository = "https://github.com/cduvray/jwt-authorizer"
keywords = ["jwt", "axum", "authorisation", "jwks"]

[dependencies]
axum = { version = "0.7" }
chrono = { version = "0.4", optional = true }
futures-util = "0.3"
futures-core = "0.3"
headers = "0.4"
jsonwebtoken = "9.2"
http = "1.0"
pin-project = "1.0"
reqwest = { version = "0.11", default-features = false, features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.25", features = ["full"] }
tower-http = { version = "0.5.0", features = ["trace", "auth"] }
tower-layer = "0.3"
tower-service = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
time = { version = "0.3", optional = true }
http-body-util = "0.1.0"

[dev-dependencies]
hyper = { version = "1.1.0", features = ["full"] }
lazy_static = "1.4.0"
tower = { version = "0.4.13", features = ["util", "buffer"] }
wiremock = "0.5.22"

[features]
default = ["default-tls", "chrono"]
default-tls = ["reqwest/default-tls"]
native-tls = ["reqwest/native-tls"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
time = ["dep:time"]
chrono = ["dep:chrono"]
